# shuttlings-cch24

./: Cargo.toml  README.md
migrations/: 20241231114356_quotes.sql
src/: challenge_12.rs  main.rs
src/challenge_-1/: mod.rs  routes.rs
src/challenge_12/: routes.rs  structs.rs
src/challenge_16/: routes.rs
src/challenge_19/: routes.rs
src/challenge_2/: routes.rs  structs.rs
src/challenge_23/: routes.rs
src/challenge_5/: routes.rs
src/challenge_9/: routes.rs
