[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
cargo-manifest = "0.17.0"
serde_yaml = "0.9.34"
serde_json = "1.0.134"
leaky-bucket = "1.1.2"
jsonwebtoken = "9.3.0"
headers = "0.4.0"
sqlx = { version = "0.8.2", features = ["uuid", "chrono"] }
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx-postgres = "0.8.2"
uuid = "1.11.0"
chrono = "0.4.39"
tower-http = { version = "0.6.2", features = ["fs"] }
html-escape = "0.2.13"
